# cv_experiment

./: .gitignore
shape_detection/: feature_extraction.py
text_detector_cpu/: README.md  craft.py  image.msgpack  inference.py  pyproject.toml  realtime.py  spoofing.py  temp_test.py  tess_osd.py  text_detection.py
text_detector_cpu/intel/text-detection-0004/FP16/: text-detection-0004.xml
