[project]
name = "text_detector_cpu"
version = "0.1.0"
description = ""
authors = [
    {name = "GTHell", email = "sosxradar@gmail.com"},
]
dependencies = [
    "opencv-python>=4.8.0.76",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
